<resources>
    <string name="app_name">网抑云</string>
    <string name="default_name">无名</string>
    <string name="default_focus_count">关注   0</string>
    <string name="default_fan_count">粉丝   0</string>
    <string name="default_favorite_text_context">我喜欢的音乐~</string>
    <string name="default_song_list_title">我的歌单</string>
    <string name="default_login_title">登陆</string>
    <string name="default_login_button_1">手机号登陆</string>
    <string name="default_login_button_2">网抑云账号登陆</string>

    <string name="defalut_login_by_phone">手机号登陆</string>
    <string name="edit_login_hint_1">手机号~</string>
    <string name="edit_login_hint_2">密码~</string>

    <string name="login_by_phone_button">登陆</string>
    <string name="register_title">手机号注册</string>
    <string name="register_button">注册</string>

    <string name="hint_nickname">名称~</string>
    <string name="hint_phone">手机号~</string>
    <string name="hint_password">密码~</string>
    <string name="hint_captcha">验证码~</string>

    <string name="button_send_captcha">点击发送验证码</string>

    <string name="register_busy">稍等~</string>
    <string name="register_number_empty">手机号不能为空</string>
    <string name="register_number_length_wrong">手机号不符合长度要求</string>
    <string name="send_captcha_successful">发送成功,请留意短信~</string>

    <string name="register_clicked_true">正在注册请稍后~</string>

    <string name="register_clicked_false">错误！！</string>
    <string name="favorites_title">标签</string>
    <string name="favourites_count">0首</string>
    <string name="default_favorites_name">我喜欢的音乐</string>
    <string name="song_image_context_description">收藏夹封面</string>
    <string name="favorites_image">歌单封面</string>
    <string name="default_head_show_content_description">用户头像</string>
    <string name="default_song_position">-1</string>
    <string name="default_song_name">歌曲名</string>
    <string name="default_sings_name">作家</string>
    <string name="song_progressbar_context_description">歌曲正在加载中</string>
    <string name="default_current_song_progress">00:00</string>
    <string name="default_total_progress">-- : --</string>
    <string name="song_image_content_description">歌曲封面</string>
    <string name="last_content_description">上一首</string>
    <string name="play_pause_content_description">暂停或开始播放</string>
    <string name="next_content_description">下一首</string>
    <string name="song_name">歌曲名称</string>
    <string name="singer_name">歌手</string>
    <string name="back_content_description">返回</string>
    <string name="default_bottom_text_value">音乐~</string>
    <string name="default_description">暂无相关描述</string>
    <string name="defaul_recommond_song">推荐歌曲</string>
    <string name="default_search_bar_text">搜索</string>
    <string name="default_text_sa_hint">搜索</string>
    <string name="default_search_button_text">搜索</string>
    <string name="default_bottom_text_context_main">音乐的力量~</string>
</resources>