<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginactivity.LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/title"
        android:text="@string/default_login_title"
        android:gravity="center"
        android:textSize="30dp"
        android:textColor="@color/black"/>
    <ImageView
        android:layout_margin="10dp"
        android:id="@+id/back_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/back_icon"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_group"
        android:orientation="vertical"
        android:layout_below="@+id/title"
        android:layout_marginTop="200dp">
        <Button
            android:id="@+id/login_by_phone"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/default_login_button_1"
            android:background="@drawable/login_button_selector_1"/>
        <Button
            android:id="@+id/login_by_cloud"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/default_login_button_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_button_selector_2"/>
    </LinearLayout>

</RelativeLayout>