<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginactivity.LoginByPhoneActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/defalut_login_by_phone"
        android:textColor="@color/black"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/back_image_phone"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="10dp"
        android:src="@drawable/back_icon" />

    <RelativeLayout
        android:id="@+id/by_phone_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_image_phone"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_phone_1"
            android:hint="@string/edit_login_hint_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="3dp"
            android:inputType="number"
            android:background="@drawable/view_shap_3"
            />

        <EditText
            android:hint="@string/edit_login_hint_2"
            android:layout_below="@id/edit_phone_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="3dp"
            android:inputType="textPassword"
            android:background="@drawable/view_shap_3"/>
    </RelativeLayout>
    <Button
        android:id="@+id/login_button"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_by_phone_selector"
        android:layout_below="@id/by_phone_relative"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="30sp"
        android:text="@string/login_by_phone_button"/>
    <TextView
        android:id="@+id/forget_password"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@id/login_button"
        android:layout_below="@id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="忘记密码"
        />
    <TextView
        android:id="@+id/register_user_account"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/login_button"
        android:layout_below="@id/login_button"
        android:text="注册账号"/>
</RelativeLayout>